<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/First_name"
        android:inputType="textEmailAddress"
        android:layout_margin="2dp"/>
    <EditText
    android:id="@+id/family_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/Family_name"
    android:inputType="textEmailAddress"
    android:layout_margin="2dp" />
    <EditText
    android:id="@+id/email"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/Email"
    android:inputType="textEmailAddress"
    android:layout_margin="2dp"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:layout_margin="2dp"/>
    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Age"
        android:inputType="number"
        android:layout_margin="2dp"/>
    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Address"
        android:layout_margin="2dp"/>
    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Sign_up"
        android:layout_margin="2dp"/>
</LinearLayout>